cluster/manifests/adhoc/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adhoc
  labels:
    name: adhoc
    pod-security.kubernetes.io/enforce: restricted
